@@ -25,7 +25,7 @@ diag("iRODS home = $irods_home, zone = $irods_zone");
 
 my $IRODS_WRITE_PATH = qq[$irods_home/npg/merged/];
 my $IRODS_ROOT       = qq[$irods_home/npg/];
-my $IRODS_PREFIX     = q[irods-sanger1-dev];
+my $IRODS_PREFIX     = q[irods-sanger1-dev-ies1];
 
 ##set to dev iRODS
 my $env_set = $ENV{'WTSI_NPG_MELT_iRODS_Test'} || q{};
@@ -161,7 +161,7 @@ my $coll_result = is_deeply($coll_list[0], @$expected_coll_list, 'irods merged c
     carp "EXPECTED: ".Dumper(@$expected_coll_list);
   }
 
-
+delete $sample_merge->{logger}; #exclude from object comparison
 my $expected = expected_library_object($tempdir);
 my $result = is_deeply($sample_merge, $expected, 'irods data to add as expected');
 
@@ -282,7 +282,6 @@ sub expected_library_object {
      'rpt_list'                 => q[19900:8:12;19901:8:12;19902:8:12;19904:8:12],
      'library_type'             => 'Standard',
      'remove_outdata'           => 0,
-     'log_file'                 => 'no log file',
      'aligned'                  => 1,
      'instrument_type'          => 'HiSeqX',
      'run_dir'                  => qq[$tempdir]
