@@ -1,8 +1,9 @@
 ChangeLog
 ==========
 
+- WTSI::NPG::iRODS::DataObject checksum call replaced with calculate_checksum
 - replace logger module (npg_common::roles::log -> WTSI::DNAP::Utilities::Loggable)
-  to allow to retier the old one
+  to allow to retire the old one
 
 release 3.16
 - 15x report generator script which uses a sqlite database for storing header information
